# RustMigrate

./: README.md  auto_run.py  driver.py  error.py  fixer.py  llms.py  oracle.py  requirements.txt  semantics.py  settings.py  transpiler.py  utils.py
Differential_Tester/.bin/instrument-c/: .rustc_info.json
Differential_Tester/.bin/instrument-c_2.0/: .rustc_info.json
Differential_Tester/.bin/instrument-c_2.0/release/: instrument  instrument.d  libc_instrumentor.d  libc_instrumentor.rlib
Differential_Tester/.bin/instrument-rust/: .rustc_info.json
Differential_Tester/c-instrumentor/: Cargo.toml
Differential_Tester/c-instrumentor/src/: lib.rs  parser.rs
Differential_Tester/instrumentor/src/: communication.rs  impls.rs  lib.rs  main_entry.rs  mangle.rs  syntax.rs  template.rs
benchmark/c/cpw/composite_number/: composite_number.c  (+1 more)
result_all/cpw/claude3/: fail.txt  success.txt
result_all/cpw/gemini/: fail.txt  success.txt
result_all/cpw/gpt4/: fail.txt  success.txt
result_all/cpw/mistral/: fail.txt  success.txt
result_all/libopenaptx/claude3/: fail.txt  success.txt
result_all/libopenaptx/gemini/: fail.txt  success.txt
result_all/libopenaptx/gpt4/: fail.txt  success.txt
result_all/libopenaptx/mistral/: fail.txt  success.txt
result_all/opl/claude3/: fail.txt  success.txt
result_all/opl/gemini/: fail.txt  success.txt
result_all/opl/gpt4/: fail.txt  success.txt
result_all/opl/mistral/: fail.txt  success.txt
utils/auto_run/: extract_run_parameter.py  find_cov.py
utils/result_process/: extract_example_in_file.py  extract_example_in_line.py
(+4566 files in other folders)
