[package]
name = "c-instrumentor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }  # 自动生成用于解析命令行参数的代码 #[derive(Parser)]
either = "1.9.0"
nom = "7.1.3"
serde = { version = "1.0.193", features = ["derive"] }  # 自动生成序列化与反序列化 #[derive(Serialize, Deserialize)]
serde_json = "1.0.108"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
